# AParsec

./: .gitignore  AParsec.cabal  AParsec.hs  Makefile  applicative-parsec.cabal  ideas  todo
doc/: todo  validation
ml/: aparsec.ml  aparsec.mli  applicative.mli
src/: AParsec.hs  Example.hs
src/Text/Parsec/: Applicative.hs
src/Text/Parsec/Applicative/: BNF.hs  Grammar.hs  Internal.hs  Types.hs  Util.hs
tst/: Main.hs  Test.hs  Types.hs
