
name:           applicative-parsec
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE
copyright:      (c) 2013 Karl Voelker
author:         Karl Voelker
maintainer:     ktvoelker@gmail.com
stability:      experimental
bug-reports:    mailto:ktvoelker@gmail.com
synopsis:       AParsec
category:       Language
tested-with:    GHC == 7.6.2

Library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base                 >= 4    && < 5,
    containers           >= 0.4  && < 0.6,
    mtl                  >= 2.1  && < 2.2,
    data-lens            >= 2.10 && < 2.11,
    data-lens-fd         >= 2.0  && < 2.1,
    data-lens-template   >= 2.1  && < 2.2
  exposed-modules:
    Text.Parsec.Applicative
    Text.Parsec.Applicative.BNF
    Text.Parsec.Applicative.Internal
    Text.Parsec.Applicative.Types
    Text.Parsec.Applicative.Util
  other-modules:
  default-extensions:
    TupleSections
    GADTs
    RankNTypes
    StandaloneDeriving
    LambdaCase
    ScopedTypeVariables
  other-extensions:
    TemplateHaskell

Test-Suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tst
  main-is: Main.hs
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base                       >= 4   && < 5,
    mtl                        >= 2.1 && < 2.2,
    QuickCheck                 >= 2.5 && < 2.6,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    applicative-parsec         == 0.0.1
  default-extensions:
    ImpredicativeTypes
    RankNTypes
    LambdaCase
    TypeSynonymInstances
    FlexibleInstances

